--- a/layouts/partials/content-body.html
+++ b/layouts/partials/content-body.html
@@ -8,7 +8,7 @@
             &middot; 
             <span class="inline-flex flex-wrap gap-2 items-center">
                 {{ range . }}
-                <a href="{{ "/tags/" | relURL }}{{ . | urlize }}/" class="tag-pill">{{ . }}</a>
+                <a href="{{ "/MyBlob/tags/" | relURL }}{{ . | urlize }}/" class="tag-pill">{{ . }}</a>
                 {{ end }}
             </span>
             {{ end }}
