--- a/layouts/partials/content-body.html
+++ b/layouts/partials/content-body.html
@@ -1,4 +1,4 @@
-<article class="prose max-w-none">
+<article class="prose max-w-none" data-pagefind-body>
     <header class="mb-8">
         <h1 class="text-3xl sm:text-5xl font-bold tracking-tight mb-4 !mt-0">{{ .Title }}</h1>
         {{ if eq .Type "posts" }}
