--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -115,20 +115,25 @@
 
     </div>
 
-    <script src="/MyBlob/pagefind/pagefind-ui.js"
-            onload="new PagefindUI({
-                element: '#search',
-                showSubResults: false,
-                baseUrl: '/MyBlob/',
-                translations: {
-                    ui: {
-                        search: "搜尋",
-                        clear_search: "清除",
-                        input_placeholder: "在這裡搜尋文章...",
-                        search_results: "個相關結果"
-                    }
+  <script>
+    function initPagefind() {
+        new PagefindUI({
+            element: '#search',
+            showSubResults: false,
+            baseUrl: '/MyBlob/',
+            translations: {
+                ui: {
+                    search: "搜尋",
+                    clear_search: "清除",
+                    input_placeholder: "在這裡搜尋文章...",
+                    search_results: "個相關結果"
                 }
-            });"></script>
+            }
+        });
+    }
+    </script>
+    
+    <script src="/MyBlob/pagefind/pagefind-ui.js" onload="initPagefind()"></script>
     <script>
          document.addEventListener('DOMContentLoaded', () => {
           // --- 1. 主題切換邏輯 ---
