--- a/layouts/partials/content-body.html
+++ b/layouts/partials/content-body.html
@@ -1,11 +1,6 @@
-<article class="prose max-w-none" data-pagefind-body>
+<article class="prose max-w-none">
     <header class="mb-8">
-       <h1 class="text-3xl sm:text-5xl font-bold tracking-tight mb-4 !mt-0" data-pagefind-body>
-            {{ .Title }}
-            <div style="display: none;">
-                {{ with .Params.tags }}{{ range . }}{{ . }} {{ end }}{{ end }}
-            </div>
-        </h1>
+        <h1 class="text-3xl sm:text-5xl font-bold tracking-tight mb-4 !mt-0">{{ .Title }}</h1>
         {{ if eq .Type "posts" }}
         <p class="text-base" style="color: var(--text-secondary);">
             發布於 {{ .Date.Format "2006年1月2日" }}
@@ -17,11 +12,21 @@
                 {{ end }}
             </span>
             {{ end }}
-            </p>
+        </p>
         {{ end }}
     </header>
-    
-    <div data-pagefind-ignore>{{ .Content }}</div>
+
+    <div style="display: none;">
+        <div data-pagefind-meta="title:{{ .Title | plainify }}"></div>
+
+        <div data-pagefind-body>
+            <p>{{ .Title }}</p>
+            {{ with .Params.tags }}
+            <p>{{ delimit . " " }}</p>
+            {{ end }}
+        </div>
+    </div>
+    {{ .Content }}
 </article>
 
 {{ if eq .Type "posts" }}
