--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,4 +1,5 @@
 {{ define "main" }}
+<div data-pagefind-body style="display:none;"></div>
 <main>
     <section class="text-center mb-12 sm:mb-20">
         <h1 class="py-8  text-3xl sm:text-5xl font-bold tracking-tight mb-4">{{ .Site.Params.description | default "歡迎來到我的部落格" }}</h1>
