--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,4 +1,5 @@
 {{ define "main" }}
+<div data-pagefind-body style="display:none;"></div>
 <main>
     <section class="mb-12 sm:mb-16">
         <header class="border-b pb-6 mb-6" style="border-color: var(--border-color);">
