--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -1,4 +1,5 @@
 {{ define "main" }}
+<div data-pagefind-body style="display:none;"></div>
 <main>
     <header class="border-b pb-6 mb-8" style="border-color: var(--border-color);">
         <h1 class="text-3xl sm:text-5xl font-bold tracking-tight">{{ .Title }}</h1>
