--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -87,6 +87,7 @@
                 element: '#search',
                 showSubResults: false,
                 baseUrl: '/MyBlob/',
+                language: 'zh-Hant',
                 translations: {
                     ui: {
                         search: "搜尋",
@@ -172,7 +173,6 @@
               }, { rootMargin: '-80px 0px -60% 0px' });
               headings.forEach(heading => observer.observe(heading));
           }
-
           const giscusContainer = document.getElementById('giscus-container');
           if (giscusContainer) {
               const script = document.createElement('script');
