feat: add series taxonomy with article navigation

--- a/layouts/partials/content-body.html
+++ b/layouts/partials/content-body.html
@@ -29,6 +29,7 @@
     </div>
 
 </article>
+{{ partial "series-box.html" . }}
 
 {{/* --- ↓↓↓ 更新區塊：支援手動與自動的上下篇導覽 ↓↓↓ --- */}}
 <nav class="flex justify-between mt-16 pt-8 border-t not-prose" style="border-color: var(--border-color);">
