--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -12,7 +12,8 @@
                 <div class="space-y-8">
                     {{/* --- ↓↓↓ 移除 Weight，僅依日期排序並建立分頁 ↓↓↓ --- */}}
                     {{/* 1. 建立分頁器：僅依日期降冪排序，日期需包含時間 */}}
-                    {{ $paginator := .Paginate (sort .Pages "Date" "desc") }}
+                    {{/* 在排序前過濾掉未來日期的文章 */}}
+                    {{ $paginator := .Paginate (sort (where .Pages "Date" "le" now) "Date" "desc") }}
                     {{/* 2. 輸出當前分頁的文章 */}}
                     {{ range $paginator.Pages }}
                         {{ .Render "card" }}
